--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
   <head>
     <meta charset="utf-8" />
     <title>Drillo</title>
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div translate="no" id="app"></div>
   </body>
 
 </html>
